fixed up alignment and size of the imput form

--- a/material-kit.css
+++ b/material-kit.css
@@ -94,7 +94,6 @@ a .material-icons, a:hover .material-icons, a:focus .material-icons {
   margin: 0;
 }
 
-.btn,
 .navbar .navbar-nav > li > a.btn {
   border: none;
   border-radius: 3px;
@@ -1751,18 +1750,22 @@ select.form-control[multiple], .form-group.is-focused select.form-control[multip
 }
 
 .input-group-btn .btn {
-  margin: 0 0 7px 0;
+  margin: 0 0 0 0;
+  /*margin: 0 0 7px 0;*/
 }
 
 .form-group.form-group-sm .input-group-btn .btn {
-  margin: 0 0 3px 0;
+  margin: 0 0 0 0;
+  /*margin: 0 0 3px 0;*/
 }
 .form-group.form-group-lg .input-group-btn .btn {
-  margin: 0 0 9px 0;
+  margin: 0 0 0 0;
+  /*margin: 0 0 9px 0;*/
 }
 
 .input-group .input-group-btn {
-  padding: 0 12px;
+  padding: 0 0;
+  /*padding: 0 12px;*/
 }
 .input-group .input-group-addon {
   border: 0;
